<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/RelativeLayout01" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" >

	<TextView 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:id="@+id/TextView01" 
		android:layout_alignParentTop="true" android:text="@string/firstname"/>

	<EditText 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:id="@+id/FirstNameEditText"
		android:layout_below="@id/TextView01"/>

	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:id="@+id/TextView02" 
		android:layout_below="@+id/FirstNameEditText" 
		android:text="@string/lastname"/>
		
	<EditText 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/TextView02" 
		android:id="@+id/LastNameEditText"/>

	<TextView 
		android:layout_below="@+id/LastNameEditText" 
		android:id="@+id/TextView03" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:text="@string/phonenumber"/>
		
	<EditText 
		android:layout_below="@+id/TextView03" 
		android:layout_height="wrap_content" 
		android:id="@+id/PhoneNrEditText" 
		android:layout_width="fill_parent"/>
		
	<TextView 
		android:layout_below="@+id/PhoneNrEditText" 
		android:id="@+id/TextView04" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:text="@string/birthday"/>
	<DatePicker 
		android:layout_below="@+id/TextView04" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/BirthDayDatePicker"/>
	<Button 
		android:layout_below="@+id/BirthDayDatePicker" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/SaveNewStudentButton" 
		android:text="@string/saveNewStudent" 
		android:layout_centerHorizontal="true" />
</RelativeLayout>
